--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -18,71 +18,28 @@
       "metadata": {
         "id": "LHI1wS7TKYvV",
         "colab_type": "code",
-        "outputId": "d0b40dd9-48bb-421c-9961-b631a477c6f7",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 122
-        }
+        "colab": {}
       },
       "source": [
-        "#if you are using google colab\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n"
+        "##mount the drive if you are using google colab\n",
+        "#from google.colab import drive\n",
+        "#drive.mount('/content/drive')\n"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LKclAdidKjyQ",
         "colab_type": "code",
-        "outputId": "20623b80-490b-4d1e-ef07-29516ddb4f80",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        }
-      },
-      "source": [
-        "# if you are using google colab\n",
-        "%cd drive\n",
-        "%cd My\\ Drive\n",
-        "%cd evaluation/"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/drive\n",
-            "/content/drive/My Drive\n",
-            "/content/drive/My Drive/evaluation\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "w5EKobydKlr7",
-        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# make sure you navigate into \"evaluation\" folder before importing models"
+        "## run the following code to navigate into \"evaluation\" folder if you are using google colab\n",
+        "#%cd drive\n",
+        "#%cd My\\ Drive\n",
+        "#%cd evaluation/"
       ],
       "execution_count": 0,
       "outputs": []
