--- a/Google-colab_scene_segmentation.ipynb
+++ b/Google-colab_scene_segmentation.ipynb
@@ -42,7 +42,7 @@
       "metadata": {
         "id": "CuCJ8GTxa0Kr",
         "colab_type": "code",
-        "outputId": "a559151d-35f8-48c2-b449-9653d7de847b",
+        "outputId": "47b84acf-bddd-485a-a34b-f6ec0f67143b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -54,7 +54,7 @@
         "print(torch.cuda.is_available())       # Should be True\n",
         "print(torch.backends.cudnn.enabled)    # Should be True"
       ],
-      "execution_count": 2,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,28 +106,21 @@
       "metadata": {
         "id": "Fglsx-NlLWJT",
         "colab_type": "code",
-        "outputId": "563a011b-85da-45fb-e174-26d4253cfe61",
+        "outputId": "74d8375b-a2be-4e9e-ba92-ae3f6b83e292",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 154
+          "height": 34
         }
       },
       "source": [
         "!git clone https://github.com/kywch/deeplabv3-semantic-scene-segmentation.git"
       ],
-      "execution_count": 4,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'deeplabv3-semantic-scene-segmentation'...\n",
-            "remote: Enumerating objects: 74, done.\u001b[K\n",
-            "remote: Counting objects: 100% (74/74), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (63/63), done.\u001b[K\n",
-            "remote: Total 110 (delta 31), reused 32 (delta 10), pack-reused 36\u001b[K\n",
-            "Receiving objects: 100% (110/110), 258.73 MiB | 35.83 MiB/s, done.\n",
-            "Resolving deltas: 100% (41/41), done.\n",
-            "Checking out files: 100% (26/26), done.\n"
+            "fatal: destination path 'deeplabv3-semantic-scene-segmentation' already exists and is not an empty directory.\n"
           ],
           "name": "stdout"
         }
@@ -138,22 +131,23 @@
       "metadata": {
         "id": "hGRogzrMMBUZ",
         "colab_type": "code",
-        "outputId": "a5f429fb-e7a9-41ec-ec52-471a1184a087",
+        "outputId": "ad8aba72-49cc-4ddf-d456-e993cff0d884",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         }
       },
       "source": [
         "# git repo files are placed under `deeplabv3-semantic-scene-segmentation\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "deeplabv3-semantic-scene-segmentation  sample_data\n"
+            "deeplabv3-semantic-scene-segmentation  images307.zip  sample_data\n",
+            "images307\t\t\t       output\n"
           ],
           "name": "stdout"
         }
@@ -206,7 +200,7 @@
       "source": [
         "#!wget https://www.dropbox.com/s/s5pmkr2gqh8dx5p/images307.zip"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +270,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "NmC-ZBGAK388",
-        "outputId": "d618057a-bfed-403b-cdb7-7585f24cff5b",
+        "outputId": "a68ff9b2-fc8d-4445-8e99-34a2b9a9a421",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -286,7 +280,7 @@
         "network = DeepLabV3(\"eval_val\", project_dir=\"deeplabv3-semantic-scene-segmentation/deeplabv3\", \n",
         "                    pretrained_file=lib_dir+\"resnet18-5c106cde.pth\").cuda()"
       ],
-      "execution_count": 19,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +296,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "rmbM1O8WK7Tq",
-        "outputId": "d4b92005-8efe-4674-d652-c93642b959c9",
+        "outputId": "0f7b66f0-f32f-4821-fb45-e6c98aab5d91",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -311,7 +305,7 @@
       "source": [
         "network.load_state_dict(torch.load(lib_dir+\"model_13_2_2_2_epoch_580.pth\"))"
       ],
-      "execution_count": 20,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -323,7 +317,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 46
         }
       ]
     },
@@ -393,7 +387,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "oFNeJyMDo3O7",
-        "outputId": "f2a11cb7-9385-4f90-8b74-c40c45a88542",
+        "outputId": "66d1f965-2f0f-4230-a693-1cb73ff46550",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -402,7 +396,7 @@
       "source": [
         "val_dataset = DatasetVal(input_path=input_dir, output_path=output_dir)"
       ],
-      "execution_count": 30,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +412,7 @@
       "metadata": {
         "id": "Vr1K5FCEa0LQ",
         "colab_type": "code",
-        "outputId": "ed2a1672-fd4f-4c68-a190-63c2ffe9ea78",
+        "outputId": "76e52539-fcb3-4714-bb4b-0404ca18365c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 86
@@ -427,7 +421,7 @@
       "source": [
         "val_dataset.examples"
       ],
-      "execution_count": 31,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +436,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 49
         }
       ]
     },
@@ -466,7 +460,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "dp03CO2hNKP4",
-        "outputId": "be9ae3a2-40f9-4763-d6d5-32e2d6290753",
+        "outputId": "2303f8c7-50b2-42d4-ce61-9f310c0e4390",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -475,7 +469,7 @@
       "source": [
         "network.eval()"
       ],
-      "execution_count": 33,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -586,7 +580,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 51
         }
       ]
     },
@@ -595,7 +589,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "MftPJ76RpC4H",
-        "outputId": "fe2981af-1608-431c-ef6c-8e711eb4e003",
+        "outputId": "ea35bdc8-7f85-4731-fd28-5fcafc17f924",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 140
@@ -652,7 +646,7 @@
         "        count += 1\n",
         "                "
       ],
-      "execution_count": 34,
+      "execution_count": 52,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,23 +688,23 @@
       "metadata": {
         "id": "_oKt265Qa0Li",
         "colab_type": "code",
-        "outputId": "a0545be3-9cb7-428b-9167-fe7df1642bcb",
+        "outputId": "dec1e606-8be2-4ecb-a804-50ae5dae1264",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 71
+          "height": 51
         }
       },
       "source": [
         "print(val_dataset.output_dir)\n",
         "print(output_files)"
       ],
-      "execution_count": 36,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "output\n",
-            "['output/AVAM_02_pred_label.png', 'output/BaltParksKeySchool_pred_label.png', 'output/Childrens1_pred_label.png', 'output/APA2_pred_label.png', 'output/PattersonPark029_pred_label.png', 'output/league1_pred_label.png', 'output/ASTT_17_pred_label.png', 'output/street2_pred_label.png', 'output/Epiphany1_pred_label.png', 'output/jeremys1_pred_label.png', 'output/BaltParkReservoir_pred_label.png', 'output/MD2_pred_label.png', 'output/BaltParksDSC_pred_label.png', 'output/BaltClayworks3_pred_label.png', 'output/washingtonmarvin1_pred_label.png', 'output/Georgetowneast_pred_label.png', 'output/washwatts1_pred_label.png', 'output/ASTT_07_pred_label.png', 'output/Congressional_pred_label.png', 'output/margo2_pred_label.png', 'output/jessup2_pred_label.png', 'output/sharpe2_pred_label.png', 'output/rocco_buda_after_pred_label.png', 'output/Amazing_Grace_087_pred_label.png', 'output/Thanksgiving_Place_69_pred_label.png', 'output/WCI_007_pred_label.png', 'output/unity2_pred_label.png', 'output/WhitWalker_TKF049_pred_label.png', 'output/jessup3_pred_label.png', 'output/ARC_of_PG_Dedication_028_pred_label.png', 'output/AnneArundel1_pred_label.png', 'output/leon1_pred_label.png', 'output/AVAM_24_pred_label.png', 'output/washmeridian2_pred_label.png', 'output/sharpehealth_pred_label.png', 'output/unzentozen_pred_label.png', 'output/BaltClayworks1_pred_label.png', 'output/newborn1_pred_label.png', 'output/Frederick2_pred_label.png', 'output/Providence_Hospital_20_pred_label.png', 'output/Friends3_pred_label.png', 'output/StLuke_s_labyrinth_from_the_churchyard_pred_label.png', 'output/CommunityMeditation2_pred_label.png', 'output/national2_pred_label.png', 'output/jeremys2_pred_label.png', 'output/WhitWalker_TKF069_pred_label.png', 'output/kids1_pred_label.png', 'output/java2_pred_label.png', 'output/WCI_051_pred_label.png', 'output/Epiphany2_pred_label.png', 'output/stpauls2_pred_label.png', 'output/ARC_of_PG_pred_label.png', 'output/meridian3_pred_label.png', 'output/BaltWash3_pred_label.png', 'output/sharpe1_pred_label.png', 'output/Village_Learning_Place25_pred_label.png', 'output/meridian2_pred_label.png', 'output/Mt_Washington_Arboretum029_pred_label.png', 'output/CBF1_pred_label.png', 'output/Earth2_pred_label.png', 'output/kernan1_pred_label.png', 'output/BaltParksCarmine_pred_label.png', 'output/metro2_pred_label.png', 'output/washingtonmarvin3_pred_label.png', 'output/ARC_of_PG_Dedication_009_pred_label.png', 'output/MD1_pred_label.png', 'output/greenmount_school_garden_pred_label.png', 'output/unity3_pred_label.png', 'output/Govans3_pred_label.png', 'output/leon3_pred_label.png', 'output/BaltWash1_pred_label.png', 'output/A_Wider_Circle_017_pred_label.png', 'output/Franklin3_pred_label.png', 'output/UMCP3_pred_label.png', 'output/StLuke_s_Bethesda_47_pred_label.png', 'output/APA1_pred_label.png', 'output/BaltParkGreenmount_pred_label.png', 'output/A_Wider_Circle_007_pred_label.png', 'output/jeremys3_pred_label.png', 'output/Annapolis_Waterworks3_pred_label.png', 'output/StLuke_s_Bethesda_13_pred_label.png', 'output/Friends2_pred_label.png', 'output/kids3_pred_label.png', 'output/newborn2_pred_label.png', 'output/metro3_pred_label.png', 'output/AnnapolisM1_pred_label.png', 'output/Franklin1_pred_label.png', 'output/kensington_pred_label.png', 'output/upenn1_pred_label.png', 'output/BaltParksCarmine2_pred_label.png', 'output/GeorgetownL3_pred_label.png', 'output/Annapolis_Waterworks1_pred_label.png', 'output/Childrens3_pred_label.png', 'output/BaltClayworks2_pred_label.png', 'output/Thanksgiving_Place_01_pred_label.png', 'output/stanthonys1_pred_label.png', 'output/hopkins2_pred_label.png', 'output/AnnapolisM2_pred_label.png', 'output/java3_pred_label.png', 'output/LHHSPC_015_pred_label.png', 'output/Bates2_pred_label.png', 'output/ARC1_pred_label.png', 'output/CBF3_pred_label.png', 'output/BaltParkDuncanSt(2)_pred_label.png', 'output/GeorgetownL2_pred_label.png', 'output/Frederick1_pred_label.png', 'output/leon2_pred_label.png', 'output/stpauls1_pred_label.png', 'output/Frederick3_pred_label.png', 'output/Bonsec_completed_pred_label.png', 'output/ARC2_pred_label.png', 'output/Marian_House16_pred_label.png', 'output/LHHSPC_028_pred_label.png', 'output/hopkins3_pred_label.png', 'output/WhitWalker_TKF007_pred_label.png', 'output/upenn2_pred_label.png', 'output/grow3_pred_label.png', 'output/Greenspaces2_pred_label.png', 'output/Providence_Hospital_17_pred_label.png', 'output/rocco_buda_playground_pred_label.png', 'output/AnneArundel2_pred_label.png', 'output/grow1_pred_label.png', 'output/NDC1_pred_label.png', 'output/BaltWash2_pred_label.png', 'output/league2_pred_label.png', 'output/ARC3_pred_label.png', 'output/AnneArundel3_pred_label.png', 'output/Epiphany3_pred_label.png', 'output/BaltParkDruidHill_pred_label.png', 'output/Earth1_pred_label.png', 'output/StAnthony_s123_pred_label.png', 'output/Marian_House12_pred_label.png', 'output/PattersonPark022_pred_label.png', 'output/Friends1_pred_label.png', 'output/Crispus2_pred_label.png', 'output/jessup1_pred_label.png', 'output/BaltParkDuncanSt_pred_label.png', 'output/Providence_Hospital_31_pred_label.png', 'output/GreenspacesPenn_pred_label.png', 'output/NDC2_pred_label.png', 'output/Greenspaces3_pred_label.png', 'output/upenn3_pred_label.png', 'output/margo3_pred_label.png', 'output/stpauls3_pred_label.png', 'output/stanthonys2_pred_label.png', 'output/Unity1_pred_label.png', 'output/UMBCbeuys_pred_label.png', 'output/AVAM_17_pred_label.png', 'output/Crispus1_pred_label.png', 'output/street1_pred_label.png', 'output/Greenspaces1_pred_label.png', 'output/CBF2_pred_label.png', 'output/Mt_Washington_Arboretum028_pred_label.png', 'output/Village_Learning_Place01_pred_label.png', 'output/national3_pred_label.png', 'output/A_Wider_Circle_006_pred_label.png', 'output/Annapolis_Waterworks2_pred_label.png', 'output/washmeridian3_pred_label.png', 'output/Earth3_pred_label.png', 'output/Bonsec_pred_label.png', 'output/Govans2_pred_label.png', 'output/UMCP2_pred_label.png', 'output/grow2_pred_label.png', 'output/washmeridian1_pred_label.png', 'output/stbartholomews_pred_label.png', 'output/Marian_House24_pred_label.png', 'output/CommunityMeditation1_pred_label.png', 'output/kernan3_pred_label.png', 'output/Amazing_Grace_089_pred_label.png', 'output/MD3_pred_label.png', 'output/metro1_pred_label.png', 'output/kids2_pred_label.png', 'output/kernan2_pred_label.png', 'output/newborn3_pred_label.png', 'output/washwatts3_pred_label.png', 'output/APA3_pred_label.png', 'output/Bates3_pred_label.png', 'output/BaltParkEastside_pred_label.png', 'output/league3_pred_label.png', 'output/mtwash1_pred_label.png', 'output/UMCP1_pred_label.png', 'output/GeorgetownL1_pred_label.png', 'output/LHHSPC_023_pred_label.png', 'output/Amazing_Grace_086_pred_label.png', 'output/hopkins1_pred_label.png', 'output/Thanksgiving_Place_65_pred_label.png', 'output/WCI_003_pred_label.png', 'output/washingtonmarvin2_pred_label.png', 'output/margo1_pred_label.png', 'output/Greenmount_School_mosaic_mural_pred_label.png', 'output/NDC3_pred_label.png', 'output/UMBC-Beuys062_pred_label.png', 'output/washwatts2_pred_label.png', 'output/UMBC-Beuys054_pred_label.png', 'output/Village_Learning_Place05_pred_label.png', 'output/ASTT_13_pred_label.png', 'output/rocco_buda_gazebo_pred_label.png', 'output/Patterson_pred_label.png', 'output/BaltParksEdmonson_pred_label.png', 'output/peoples_pred_label.png', 'output/Govans1_pred_label.png', 'output/Franklin2_pred_label.png', 'output/AnnapolisM3_pred_label.png', 'output/Childrens2_pred_label.png', 'output/Crispus3_pred_label.png', 'output/Bates1_pred_label.png', 'output/national1_pred_label.png', 'output/java1_pred_label.png', 'output/CommunityMeditation3_pred_label.png', 'output/meridian1_pred_label.png']\n"
+            "['output/street2_pred_label.png', 'output/street1_pred_label.png']\n"
           ],
           "name": "stdout"
         }
@@ -740,7 +734,7 @@
       "metadata": {
         "id": "PfQXKw2ua0Lo",
         "colab_type": "code",
-        "outputId": "ecf3a172-08c2-4909-d1db-a892285df119",
+        "outputId": "f2b6ed8d-f144-4119-f3d0-3d8457daf1d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -761,13 +755,13 @@
         "\n",
         "print(pixel_ratio.tolist())"
       ],
-      "execution_count": 0,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "AVAM_02\n",
-            "[0.0, 0.00018328445747800586, 0.09368408190564388, 0.0, 0.0, 0.011353989813242784, 0.0, 0.0014727066934197663, 0.5836741781139064, 0.19049364613880743, 0.04078239954725524, 0.06312059474198693, 0.0, 0.004688223491279519, 3.8586201574317025e-05, 0.0, 0.0, 0.0, 0.0, 0.010508308895405669]\n"
+            "street2\n",
+            "[0.14567489801864802, 0.06896124708624708, 0.434604458041958, 0.0, 0.01633158508158508, 0.037807765151515155, 0.001757357226107226, 0.011531177156177156, 0.2095807837995338, 0.0036276223776223774, 0.02861487470862471, 0.014213650932400932, 0.000628277972027972, 0.001065340909090909, 0.00044434731934731936, 0.0, 0.0, 0.00030048076923076925, 0.002576850233100233, 0.022279283216783217]\n"
           ],
           "name": "stdout"
         }
@@ -806,23 +800,22 @@
       "metadata": {
         "id": "IRqBjztia0Ly",
         "colab_type": "code",
-        "outputId": "ff0de0b6-c844-46d3-f17e-82b9da36a226",
+        "outputId": "873929b0-0884-4c60-a592-1056a7e64afd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 51
         }
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            " 00_object_ratios.csv\t\t\t images307.zip\t       output\n",
-            " deeplabv3-semantic-scene-segmentation\t'images307.zip?dl=0'   sample_data\n",
-            " images307\t\t\t\t input\n"
+            "00_object_ratios.csv\t\t       images307      output\n",
+            "deeplabv3-semantic-scene-segmentation  images307.zip  sample_data\n"
           ],
           "name": "stdout"
         }
