--- a/Google-colab_scene_segmentation.ipynb
+++ b/Google-colab_scene_segmentation.ipynb
@@ -54,7 +54,7 @@
         "print(torch.cuda.is_available())       # Should be True\n",
         "print(torch.backends.cudnn.enabled)    # Should be True"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -115,7 +115,7 @@
       "source": [
         "!git clone https://github.com/kywch/deeplabv3-semantic-scene-segmentation.git"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,7 @@
         "# git repo files are placed under `deeplabv3-semantic-scene-segmentation\n",
         "!ls"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,6 +259,7 @@
         "lib_dir = \"deeplabv3-semantic-scene-segmentation/deeplabv3/\"\n",
         "\n",
         "# Specify your output directory\n",
+        "#input_dir = \"images307\" # the image folder from the downloaded file\n",
         "input_dir = \"deeplabv3-semantic-scene-segmentation/input\"\n",
         "output_dir = \"output\""
       ],
@@ -280,7 +281,7 @@
         "network = DeepLabV3(\"eval_val\", project_dir=\"deeplabv3-semantic-scene-segmentation/deeplabv3\", \n",
         "                    pretrained_file=lib_dir+\"resnet18-5c106cde.pth\").cuda()"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -305,7 +306,7 @@
       "source": [
         "network.load_state_dict(torch.load(lib_dir+\"model_13_2_2_2_epoch_580.pth\"))"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -396,7 +397,7 @@
       "source": [
         "val_dataset = DatasetVal(input_path=input_dir, output_path=output_dir)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +422,7 @@
       "source": [
         "val_dataset.examples"
       ],
-      "execution_count": 49,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +470,7 @@
       "source": [
         "network.eval()"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +647,7 @@
         "        count += 1\n",
         "                "
       ],
-      "execution_count": 52,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,7 +699,7 @@
         "print(val_dataset.output_dir)\n",
         "print(output_files)"
       ],
-      "execution_count": 54,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +756,7 @@
         "\n",
         "print(pixel_ratio.tolist())"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -809,7 +810,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 58,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
