--- a/Google-colab_scene_segmentation.ipynb
+++ b/Google-colab_scene_segmentation.ipynb
@@ -131,7 +131,7 @@
       "metadata": {
         "id": "hGRogzrMMBUZ",
         "colab_type": "code",
-        "outputId": "ad8aba72-49cc-4ddf-d456-e993cff0d884",
+        "outputId": "51451b94-2c50-4826-fee6-d45ab050e6aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -141,13 +141,13 @@
         "# git repo files are placed under `deeplabv3-semantic-scene-segmentation\n",
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "deeplabv3-semantic-scene-segmentation  images307.zip  sample_data\n",
-            "images307\t\t\t       output\n"
+            "00_object_ratios.csv\t\t       output\n",
+            "deeplabv3-semantic-scene-segmentation  sample_data\n"
           ],
           "name": "stdout"
         }
@@ -191,48 +191,13 @@
       "metadata": {
         "id": "Vu495A1pMz49",
         "colab_type": "code",
-        "outputId": "fb8071bc-164a-4831-949d-268ce1412b61",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 448
-        }
+        "colab": {}
       },
       "source": [
         "#!wget https://www.dropbox.com/s/s5pmkr2gqh8dx5p/images307.zip"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "--2020-05-29 02:37:01--  https://www.dropbox.com/s/s5pmkr2gqh8dx5p/images307.zip\n",
-            "Resolving www.dropbox.com (www.dropbox.com)... 162.125.1.1, 2620:100:6016:1::a27d:101\n",
-            "Connecting to www.dropbox.com (www.dropbox.com)|162.125.1.1|:443... connected.\n",
-            "HTTP request sent, awaiting response... 301 Moved Permanently\n",
-            "Location: /s/raw/s5pmkr2gqh8dx5p/images307.zip [following]\n",
-            "--2020-05-29 02:37:01--  https://www.dropbox.com/s/raw/s5pmkr2gqh8dx5p/images307.zip\n",
-            "Reusing existing connection to www.dropbox.com:443.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://uc93ef772b23135463505e21f901.dl.dropboxusercontent.com/cd/0/inline/A4kBcD1Pj6tPUDi7ynK_u5XfuRP6BIoGe5AkLdbKIPQQbyIVYS5jSUxoW747scNidE1UfkHCfoga42ustxOtaOvnjGk_cJZ9BZzKKBB2yfzM6uSeH_FCQlsmTinppieLrgk/file# [following]\n",
-            "--2020-05-29 02:37:02--  https://uc93ef772b23135463505e21f901.dl.dropboxusercontent.com/cd/0/inline/A4kBcD1Pj6tPUDi7ynK_u5XfuRP6BIoGe5AkLdbKIPQQbyIVYS5jSUxoW747scNidE1UfkHCfoga42ustxOtaOvnjGk_cJZ9BZzKKBB2yfzM6uSeH_FCQlsmTinppieLrgk/file\n",
-            "Resolving uc93ef772b23135463505e21f901.dl.dropboxusercontent.com (uc93ef772b23135463505e21f901.dl.dropboxusercontent.com)... 162.125.1.6, 2620:100:6016:6::a27d:106\n",
-            "Connecting to uc93ef772b23135463505e21f901.dl.dropboxusercontent.com (uc93ef772b23135463505e21f901.dl.dropboxusercontent.com)|162.125.1.6|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 FOUND\n",
-            "Location: /cd/0/inline2/A4nxA1fp1Rc2OsehtdttvZXkeFyrSd8YnerC1t0ndnQrPm1BIldv3ktaMG3fY7d5tW0eNA_rqfLv7Cet3JcCR0HJ0-Nb9wXtI6g9Fob9vQEPeYianVPcT-04HhR3bBcW_TqBkzS0NQCnf7u7UfIaf2N6aAE5lHbreRKu5ClY253j2LvEZwBv2E_NGoWzkLiy3ZfmFApmE6wZ_soxdmScn8E3BhICzPDiPFrlyHl64QZJFtfuv90CO0r6yBCzBHbKm1juoXbmEXvezOEALq8C2cjglw2w_nD33uVrbHo46mPpOshS3DV_4Mk765Zs3wDjl7bGvii8aYkV2yWB3biMfSkRx7bctoUzERMrDgr7LBje-g/file [following]\n",
-            "--2020-05-29 02:37:02--  https://uc93ef772b23135463505e21f901.dl.dropboxusercontent.com/cd/0/inline2/A4nxA1fp1Rc2OsehtdttvZXkeFyrSd8YnerC1t0ndnQrPm1BIldv3ktaMG3fY7d5tW0eNA_rqfLv7Cet3JcCR0HJ0-Nb9wXtI6g9Fob9vQEPeYianVPcT-04HhR3bBcW_TqBkzS0NQCnf7u7UfIaf2N6aAE5lHbreRKu5ClY253j2LvEZwBv2E_NGoWzkLiy3ZfmFApmE6wZ_soxdmScn8E3BhICzPDiPFrlyHl64QZJFtfuv90CO0r6yBCzBHbKm1juoXbmEXvezOEALq8C2cjglw2w_nD33uVrbHo46mPpOshS3DV_4Mk765Zs3wDjl7bGvii8aYkV2yWB3biMfSkRx7bctoUzERMrDgr7LBje-g/file\n",
-            "Reusing existing connection to uc93ef772b23135463505e21f901.dl.dropboxusercontent.com:443.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 102362764 (98M) [application/zip]\n",
-            "Saving to: ‘images307.zip’\n",
-            "\n",
-            "images307.zip       100%[===================>]  97.62M  43.5MB/s    in 2.2s    \n",
-            "\n",
-            "2020-05-29 02:37:05 (43.5 MB/s) - ‘images307.zip’ saved [102362764/102362764]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -242,8 +207,20 @@
         "colab": {}
       },
       "source": [
-        "#!ls\n",
         "#!unzip -q images307.zip"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3b4AuySUYV3B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#!ls images307"
       ],
       "execution_count": 0,
       "outputs": []
@@ -271,7 +248,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "NmC-ZBGAK388",
-        "outputId": "a68ff9b2-fc8d-4445-8e99-34a2b9a9a421",
+        "outputId": "a8c9c7db-ecb8-491d-a52a-39e2725bb80a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -281,7 +258,7 @@
         "network = DeepLabV3(\"eval_val\", project_dir=\"deeplabv3-semantic-scene-segmentation/deeplabv3\", \n",
         "                    pretrained_file=lib_dir+\"resnet18-5c106cde.pth\").cuda()"
       ],
-      "execution_count": 0,
+      "execution_count": 132,
       "outputs": [
         {
           "output_type": "stream",
@@ -297,7 +274,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "rmbM1O8WK7Tq",
-        "outputId": "0f7b66f0-f32f-4821-fb45-e6c98aab5d91",
+        "outputId": "ec5f029e-e6aa-4d37-98c5-0ba80f337966",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -306,7 +283,7 @@
       "source": [
         "network.load_state_dict(torch.load(lib_dir+\"model_13_2_2_2_epoch_580.pth\"))"
       ],
-      "execution_count": 0,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,7 +295,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 133
         }
       ]
     },
@@ -330,14 +307,17 @@
         "colab": {}
       },
       "source": [
+        "import shutil\n",
+        "\n",
         "class DatasetVal(torch.utils.data.Dataset):\n",
         "    def __init__(self, input_path, output_path):\n",
         "        self.img_dir = input_path\n",
         "        self.img_h = 1024\n",
         "        self.img_w = 2048\n",
         "        self.output_dir = output_path\n",
-        "        if not os.path.exists(output_path):\n",
-        "            os.makedirs(output_path)\n",
+        "        if os.path.exists(output_path):\n",
+        "          shutil.rmtree(output_path, ignore_errors=True)\n",
+        "        os.makedirs(output_path)\n",
         "        self.debug_dir = output_path + '/debug/'\n",
         "        if not os.path.exists(self.debug_dir):\n",
         "            os.makedirs(self.debug_dir)\n",
@@ -345,7 +325,7 @@
         "        self.examples = []\n",
         "        file_names = os.listdir(self.img_dir)\n",
         "        for file_name in file_names:\n",
-        "            if file_name.lower().endswith(('.jpg', '.png', '.jpeg', '.BMP')):\n",
+        "            if file_name.lower().endswith(('.jpg', '.png', '.jpeg', '.bmp')):\n",
         "                img_id = file_name.split('.')[0]\n",
         "                img_path = self.img_dir + '/' + file_name\n",
         "                example = {}\n",
@@ -388,7 +368,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "oFNeJyMDo3O7",
-        "outputId": "66d1f965-2f0f-4230-a693-1cb73ff46550",
+        "outputId": "f77f51f7-17b6-48e6-9947-17023619f225",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -397,7 +377,7 @@
       "source": [
         "val_dataset = DatasetVal(input_path=input_dir, output_path=output_dir)"
       ],
-      "execution_count": 0,
+      "execution_count": 135,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,33 +393,44 @@
       "metadata": {
         "id": "Vr1K5FCEa0LQ",
         "colab_type": "code",
-        "outputId": "76e52539-fcb3-4714-bb4b-0404ca18365c",
+        "outputId": "479f828d-dfac-4cc6-9997-436f7b10d531",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 86
+          "height": 34
         }
       },
       "source": [
-        "val_dataset.examples"
+        "len(val_dataset.examples)"
       ],
-      "execution_count": 0,
+      "execution_count": 136,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[{'img_id': 'street2',\n",
-              "  'img_path': 'deeplabv3-semantic-scene-segmentation/input/street2.jpg'},\n",
-              " {'img_id': 'street1',\n",
-              "  'img_path': 'deeplabv3-semantic-scene-segmentation/input/street1.jpg'}]"
+              "2"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 49
+          "execution_count": 136
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3J8oObW6a-fR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "#!rm -rf output\n",
+        "#!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -461,7 +452,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "dp03CO2hNKP4",
-        "outputId": "2303f8c7-50b2-42d4-ce61-9f310c0e4390",
+        "outputId": "53736e87-4b0d-4410-a823-8b71ddd98468",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -470,7 +461,7 @@
       "source": [
         "network.eval()"
       ],
-      "execution_count": 0,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -581,7 +572,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 51
+          "execution_count": 139
         }
       ]
     },
@@ -590,7 +581,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "MftPJ76RpC4H",
-        "outputId": "ea35bdc8-7f85-4731-fd28-5fcafc17f924",
+        "outputId": "8c58236d-440f-4e9f-e90b-b21a6879f5b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 140
@@ -647,7 +638,7 @@
         "        count += 1\n",
         "                "
       ],
-      "execution_count": 0,
+      "execution_count": 140,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +680,7 @@
       "metadata": {
         "id": "_oKt265Qa0Li",
         "colab_type": "code",
-        "outputId": "dec1e606-8be2-4ecb-a804-50ae5dae1264",
+        "outputId": "557d95b9-7b7b-4242-d309-e145f3b9fc2c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -699,7 +690,7 @@
         "print(val_dataset.output_dir)\n",
         "print(output_files)"
       ],
-      "execution_count": 0,
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "stream",
@@ -735,7 +726,7 @@
       "metadata": {
         "id": "PfQXKw2ua0Lo",
         "colab_type": "code",
-        "outputId": "f2b6ed8d-f144-4119-f3d0-3d8457daf1d8",
+        "outputId": "953eb533-9c48-418b-b08a-23b442960c74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -756,7 +747,7 @@
         "\n",
         "print(pixel_ratio.tolist())"
       ],
-      "execution_count": 0,
+      "execution_count": 144,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +792,7 @@
       "metadata": {
         "id": "IRqBjztia0Ly",
         "colab_type": "code",
-        "outputId": "873929b0-0884-4c60-a592-1056a7e64afd",
+        "outputId": "ea248678-a208-4448-f0c5-1214e89d797e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -810,7 +801,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": 146,
       "outputs": [
         {
           "output_type": "stream",
