--- a/Google-colab_scene_segmentation.ipynb
+++ b/Google-colab_scene_segmentation.ipynb
@@ -141,7 +141,7 @@
         "# git repo files are placed under `deeplabv3-semantic-scene-segmentation\n",
         "!ls"
       ],
-      "execution_count": 74,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +183,9 @@
       "source": [
         "### Download the images to process\n",
         "\n",
-        "I am using the example images for this co-lab."
+        "I am using the example images for this co-lab.\n",
+        "\n",
+        "- *OR or you can upload the zipped images from your local computer by uncommenting the below.*"
       ]
     },
     {
@@ -194,7 +196,22 @@
         "colab": {}
       },
       "source": [
-        "#!wget https://www.dropbox.com/s/s5pmkr2gqh8dx5p/images307.zip"
+        "#from google.colab import files\n",
+        "#uploaded = files.upload()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hGp8Z08_XZy2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# make sure that you have the file\n",
+        "!ls "
       ],
       "execution_count": 0,
       "outputs": []
@@ -258,7 +275,7 @@
         "network = DeepLabV3(\"eval_val\", project_dir=\"deeplabv3-semantic-scene-segmentation/deeplabv3\", \n",
         "                    pretrained_file=lib_dir+\"resnet18-5c106cde.pth\").cuda()"
       ],
-      "execution_count": 132,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +300,7 @@
       "source": [
         "network.load_state_dict(torch.load(lib_dir+\"model_13_2_2_2_epoch_580.pth\"))"
       ],
-      "execution_count": 133,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +394,7 @@
       "source": [
         "val_dataset = DatasetVal(input_path=input_dir, output_path=output_dir)"
       ],
-      "execution_count": 135,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -402,7 +419,7 @@
       "source": [
         "len(val_dataset.examples)"
       ],
-      "execution_count": 136,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +478,7 @@
       "source": [
         "network.eval()"
       ],
-      "execution_count": 139,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -638,7 +655,7 @@
         "        count += 1\n",
         "                "
       ],
-      "execution_count": 140,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +707,7 @@
         "print(val_dataset.output_dir)\n",
         "print(output_files)"
       ],
-      "execution_count": 142,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,7 +764,7 @@
         "\n",
         "print(pixel_ratio.tolist())"
       ],
-      "execution_count": 144,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +818,7 @@
       "source": [
         "!ls"
       ],
-      "execution_count": 146,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
